--- a/index.html
+++ b/index.html
@@ -4,14 +4,22 @@
     <meta name="description" content="&lt;model-viewer&gt; template">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Nature &amp; Biodiversity Conservation</title>
+
+	<link rel="apple-touch-icon" sizes="180x180" href="img/favicon/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+	<link rel="manifest" href="img/favicon/site.webmanifest">
+	<link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+	<meta name="msapplication-TileColor" content="#00a300">
+	<meta name="theme-color" content="#ffffff">
     
-    <link rel="apple-touch-icon" sizes="180x180" href="https://cdn.glitch.global/9785d946-1dde-40a8-af18-a00e4628e8eb/apple-touch-icon.png?v=1698273255566">
+    <!--<link rel="apple-touch-icon" sizes="180x180" href="https://cdn.glitch.global/9785d946-1dde-40a8-af18-a00e4628e8eb/apple-touch-icon.png?v=1698273255566">
     <link rel="icon" type="image/png" sizes="32x32" href="https://cdn.glitch.global/9785d946-1dde-40a8-af18-a00e4628e8eb/favicon-32x32.png?v=1698273252426">
     <link rel="icon" type="image/png" sizes="16x16" href="https://cdn.glitch.global/9785d946-1dde-40a8-af18-a00e4628e8eb/favicon-16x16.png?v=1698273252065">
     <link rel="manifest" href="https://cdn.glitch.global/9785d946-1dde-40a8-af18-a00e4628e8eb/site.webmanifest?v=1698273254091">
     <link rel="mask-icon" href="https://cdn.glitch.global/9785d946-1dde-40a8-af18-a00e4628e8eb/safari-pinned-tab.svg?v=1698273253600" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#00a300">
-    <meta name="theme-color" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">-->
     
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
