--- a/index.html
+++ b/index.html
@@ -70,12 +70,11 @@
 						<h1> </h1>
             <br>
   					<div class="initial-instructions">
-              <h2><b>A new funding model to augment the sustainability of donations for nature and biodiversity conservation projects or initiatives.</b></h2><br>
+              <h2><b>Reinventing nature &amp; biodiversity conservation donations</b></h2><br>
                 <h4>
-                  This application allows you to create your digital asset —be it an animal, a plant or something else— and and build up a healthy life with fun and rewards.
-Choose the avatar your like, name it, and your good to go! ✨ Like a tamagoshi 3.0 :) <br>
-Your favorite virtual being relies on you to have a happy healthy life: make sure it eats yummy food and drinks water, motion regularly, gets some me time as well as family &amp; friend time. Teach it routines, love and play, give them time to rest, just like you would do for your digital self ❤️
-              </h4>
+                Our new funding model alternative aims at revolutionizing wildlife conservation with gamification, web3, and a decentralized governance approach<br>
+		Contributing to protect endangered species and their habitat through technology, innovative funding and community-led regenerative practices.<br>
+			We start with mountain gorillas in the volcanoe region of East Africa's natural parks.</h4>
               <br><br>
               <h2>Stay tuned!</h2>
 	  				</div>
